--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <script type="text/javascript">
   var spec = "https://zhening-wang.github.io/FIT3179/visualization.vl.json";
-  vegaEmbed('#vis', https://github.com/Zhening-Wang/FIT3179/blob/main/visualization.vl.json).then(function(result) {
+  vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
